# rpi1b-network-guard

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
infrastructure/: net-monitor.service
src/net_guard/: main.py  monitoring.py
tests/: test_api.py
